# stackio

./: .gitignore  CMakeLists.txt  ReadMe.md  auth.json  build.bat  config.xml  config.yaml  main.cpp  wal.json
includes/: config.h  errors.h  handler.h  reqguard.h  request.h  router.h  server.h  storage_engine.h
source/: errors.cpp  handler.cpp  pugixml.cpp  reqguard.cpp  request.cpp  router.cpp  server.cpp  server_extended.cpp  storage_engine.cpp
